--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
+    "flow": "flow check",
     "build": "node build/build.js"
+  },
+  "ava": {
+    "babel": "inherit",
+    "require": [
+      "babel-register"
+    ],
+    "files": [
+      "test/*.js",
+      "!test/**/*-x.js"
+    ]
   },
   "dependencies": {
     "vue": "^2.1.0",
@@ -17,8 +28,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
+    "ava": "^0.17.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
@@ -30,13 +43,14 @@
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "flow-bin": "^0.36.0",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
-    "semver": "^5.3.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
