--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-router": "^2.0.3",
     "vuex": "^2.0.0",
     "vuex-router-sync": "^3.0.0",
-    "wilddog": "^2.3.8"
+    "wilddog": "^2.3.8",
+    "wildvue": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
