--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "vuex": "^2.0.0",
     "vuex-router-sync": "^3.0.0",
     "wilddog": "^2.3.8",
-    "wildvue": "^1.1.0"
+    "wildvue": "^1.1.0",
+    "d3-scale": "^1.0.4",
+    "d3-selection": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -34,8 +36,10 @@
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-plugin-transform-vue-jsx": "^3.2.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-register": "^6.0.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
