add upload file to qiniu

--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "share-books",
   "version": "1.0.0",
   "description": "share books applications(v2)",
-  "author": "alex",
+  "author": "alex <lsj178@139.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
     "flow": "flow check",
-    "build": "node build/build.js"
+    "test": "ava",
+    "dev": "webpack-dev-server --inline --hot",
+    "prd": "npm-run-all clear build cpres",
+    "cpres": "shx cp -rf static/* dist/",
+    "clear": "shx rm -rf dist && shx echo clear dist ok",
+    "build": "cross-env NODE_ENV=production webpack -p --progress --hide-modules",
+    "serve": "cd dist && python -m SimpleHTTPServer 8080 && cd .."
   },
   "ava": {
     "babel": "inherit",
@@ -20,51 +25,51 @@
     ]
   },
   "dependencies": {
+    "d3-scale": "^1.0.4",
+    "d3-selection": "^1.0.3",
+    "axios": "^0.15.2",
+    "timeago.js": "^2.0.2",
+    "qiniu-js": "^1.0.14-beta",
+    "qiniu-web-uploader": "^2.1.2",
     "vue": "^2.1.0",
     "vue-router": "^2.0.3",
     "vuex": "^2.0.0",
     "vuex-router-sync": "^3.0.0",
     "wilddog": "^2.3.8",
-    "wildvue": "^1.1.0",
-    "d3-scale": "^1.0.4",
-    "d3-selection": "^1.0.3"
+    "wildvue": "^1.1.0"  
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
     "ava": "^0.17.0",
+    "flow-bin": "^0.36.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-1": "^6.13.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-plugin-transform-vue-jsx": "^3.2.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-register": "^6.0.0",
-    "chalk": "^1.1.3",
-    "connect-history-api-fallback": "^1.1.0",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
-    "flow-bin": "^0.36.0",
-    "function-bind": "^1.0.2",
-    "html-webpack-plugin": "^2.8.1",
-    "http-proxy-middleware": "^0.17.2",
+    "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
-    "opn": "^4.0.2",
-    "ora": "^0.3.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.4",
+    "npm-run-all": "^3.0.0",
+    "shx": "^0.1.4",
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1",
     "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^2.0.0",
+    "vue-html-loader": "^1.2.3",
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1"
+    "es6-promise": "^4.0.0",
+    "webpack": "2.2.0-rc.0",
+    "webpack-dev-server": "2.2.0-rc.0"
   },
   "engines": {
     "node": ">= 4.0.0",
