--- a/package.json
+++ b/package.json
@@ -25,33 +25,37 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.15.2",
     "d3-scale": "^1.0.4",
     "d3-selection": "^1.0.3",
-    "axios": "^0.15.2",
+    "marked": "^0.3.6",
+    "prismjs": "^1.5.1",
     "timeago.js": "^2.0.2",
     "vue": "^2.1.0",
     "vue-router": "^2.0.3",
     "vuex": "^2.0.0",
     "vuex-router-sync": "^3.0.0",
     "wilddog": "^2.3.8",
-    "wildvue": "^1.1.0"  
+    "wildvue": "^1.1.0"
   },
   "devDependencies": {
     "ava": "^0.17.0",
-    "flow-bin": "^0.36.0",
     "babel-core": "^6.0.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^6.0.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-1": "^6.13.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-plugin-transform-vue-jsx": "^3.2.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-1": "^6.13.0",
     "babel-register": "^6.0.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
+    "es6-promise": "^4.0.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
+    "flow-bin": "^0.36.0",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
     "npm-run-all": "^3.0.0",
@@ -65,9 +69,8 @@
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.0",
-    "es6-promise": "^4.0.0",
-    "webpack": "2.2.0-rc.0",
-    "webpack-dev-server": "2.2.0-rc.0"
+    "webpack": "^2.2.0-rc.0",
+    "webpack-dev-server": "^2.2.0-rc.0"
   },
   "engines": {
     "node": ">= 4.0.0",
